# kanbaclone

./: .env.example  .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  instructions.md  package-lock.json  package.json  vercel.json  vitest.config.ts
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh  config.json  package.json  tsconfig.json  vcpkg.json  vercel.json
backend/api/: index.ts
backend/src/: index.ts  main.cpp
backend/src/controllers/: AiChatController.cpp  AiChatController.h  AuthController.cpp  AuthController.h  ColumnController.cpp  ColumnController.h  HealthController.cpp  HealthController.h  ProjectController.cpp  ProjectController.h  TaskController.cpp  TaskController.h
backend/src/filters/: AuthFilter.cpp  AuthFilter.h  CorsFilter.cpp  CorsFilter.h
backend/src/lib/: db.ts  session.ts
backend/src/middleware/: auth.ts
backend/src/routes/: ai-chat.ts  auth.ts  columns.ts  projects.ts  tasks.ts
backend/src/utils/: Database.cpp  Database.h  PasswordHash.cpp  PasswordHash.h  Session.cpp  Session.h
backend/tests/: CMakeLists.txt
backend/tests/dbtest/: CMakeLists.txt  db_test_helper.h  docker-compose.test.yml  run_db_tests.sh  test_column_functions.cpp  test_member_functions.cpp  test_project_functions.cpp  test_task_functions.cpp  test_user_functions.cpp
backend/tests/httptest/: CMakeLists.txt  Dockerfile  http_test_client.cpp  http_test_client.h  test_ai_chat.cpp  test_auth.cpp  test_columns.cpp  test_cors.cpp  test_health.cpp  test_helpers.cpp  test_helpers.h  test_main.cpp  test_projects.cpp  test_tasks.cpp
backend/tests/integration/: test_auth_flow.cpp  test_project_workflow.cpp
backend/tests/mocks/: MockDrogon.h  sodium.h
backend/tests/mocks/drogon/: HttpClient.h
backend/tests/mocks/drogon/orm/: DbClient.h
backend/tests/mocks/json/: json.h
backend/tests/mocks/uuid/: uuid.h
backend/tests/unit/: AiChatController_patched.cpp  test_ai_chat_controller.cpp  test_auth_controller.cpp  test_auth_filter.cpp  test_column_controller.cpp  test_cors_filter.cpp  test_database.cpp  test_health_controller.cpp  test_password_hash.cpp  test_project_controller.cpp  test_session.cpp  test_task_controller.cpp
cloudformation/: infrastructure.yaml
cloudformation/iam/: create-deployer-role.py
cloudformation/scripts/: deploy-resources.sh  init-database.sh
database/: functions.sql  schema.sql
deployment/parameters/: production.json
deployment/scripts/: deploy-resources.sh  teardown.sh
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx  setup.ts  test-utils.tsx
frontend/src/__tests__/api/: client.test.ts
frontend/src/__tests__/components/: ColumnBoard.test.tsx  ProjectModal.test.tsx  Sidebar.test.tsx  TaskCard.test.tsx  TaskModal.test.tsx
frontend/src/__tests__/context/: AuthContext.test.tsx  ProjectsContext.test.tsx
frontend/src/__tests__/integration/: auth-flow.test.tsx  project-workflow.test.tsx
frontend/src/__tests__/pages/: AIAssistant.test.tsx  Dashboard.test.tsx  Login.test.tsx  Register.test.tsx  Settings.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: ColumnBoard.tsx  ProjectModal.tsx  Sidebar.tsx  StrictModeDroppable.tsx  TaskCard.tsx  TaskModal.tsx
frontend/src/context/: AuthContext.tsx  ProjectsContext.tsx
frontend/src/pages/: AIAssistant.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  ProjectBoard.tsx  Register.tsx  Settings.tsx
frontend/src/types/: index.ts
integration-tests/: docker-compose.yml
src/app/: layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/me/: route.ts
src/app/api/auth/register/: route.ts
src/app/api/auth/update/: route.ts
src/app/api/columns/: route.ts
src/app/api/projects/: route.ts
src/app/api/projects/[id]/: route.ts
src/app/api/projects/[id]/invite/: route.ts
src/app/api/tasks/: route.ts
src/app/api/tasks/move/: route.ts
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/projects/: page.tsx
src/app/projects/[id]/: page.tsx
src/app/register/: page.tsx
src/app/settings/: page.tsx
src/components/: ColumnBoard.tsx  ProjectModal.tsx  Sidebar.tsx  StrictModeDroppable.tsx  TaskCard.tsx  TaskModal.tsx
src/context/: AuthContext.tsx
src/lib/: db.ts  session.ts
src/types/: index.ts
tests/: setup.ts
tests/helpers/: auth.ts  mockCookies.ts  testDb.ts
tests/integration/: auth.test.ts  columns.test.ts  projects.test.ts  tasks.test.ts
tests/unit/: session.test.ts
